FIX: avatar stretching, discord status z-index, other status issues
close #36

--- a/src/css/baseTheme/FriendList/currentUser.css
+++ b/src/css/baseTheme/FriendList/currentUser.css
@@ -17,6 +17,10 @@
   margin: 0 0 5px 8px !important;
 }
 
+.currentUserContainer .avatar {
+  z-index: 0 !important;
+}
+
 /* ============================== DnD alignment ============================== */
 
 /* Reverse order: Label -> check Box */
