--- a/src/css/baseTheme/FriendList/quickAccess.css
+++ b/src/css/baseTheme/FriendList/quickAccess.css
@@ -14,7 +14,7 @@
 }
 
 /* Never scale avatar down */
-.avatarHolder {
+.quickAccessFriend .avatarHolder {
   transform: scale(1, 1) translateX(0);
   padding: 0 !important;
 }
